Fix layout issues for Firefox and Chrome. Apparently not all Webkits are created equal.

--- a/views/screen.scss
+++ b/views/screen.scss
@@ -1,8 +1,3 @@
-@font-face {
-	font-family:"AirConditioner";
-	src:url("/AirConditioner.ttf") format("truetype");
-}
-
 body { 
 	margin:0;
 	padding:0;
@@ -25,6 +20,7 @@ article p {
 }
 
 #bottom {
+	display:block;
 	width:85%;
 	margin:0 auto;
 }
@@ -41,6 +37,7 @@ article p {
 footer {
 	clear:both;
 	
+	display:block;
 	font-size:.8em;
 	text-align:center;
 
@@ -140,12 +137,16 @@ a:hover {
 /*	Forms	*/
 form {
 	background:#ed2414;
-	width:100%;
 	
 	margin:0 auto;
 	padding:15px;
 	
 	text-align:center;
+}
+
+form h2 {
+	margin:15px auto;
+	width:85%;
 }
 
 form, input {
